--- a/Dockerfile/homeassistant/Dockerfile
+++ b/Dockerfile/homeassistant/Dockerfile
@@ -1,7 +1,15 @@
-FROM homeassistant/home-assistant:stable
+# Utiliser l'image de base Ubuntu 20.04
+FROM ubuntu:20.04
 
-# Installer SSH
-RUN apt-get update && apt-get install -y openssh-server
+# Mettre à jour les paquets et installer SSH et Python
+RUN apt-get update && apt-get install -y \
+    openssh-server \
+    python3 \
+    curl \
+    vim \
+    net-tools \
+    iputils-ping \
+    lsb-release
 
 # Créer le répertoire pour SSH
 RUN mkdir /var/run/sshd
@@ -10,5 +18,11 @@ RUN mkdir /var/run/sshd
 RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
 RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
-# Démarrer SSH
-CMD ["/usr/sbin/sshd", "-D"]
+# Définir un mot de passe pour l'utilisateur root
+RUN echo 'root:password' | chpasswd
+
+# Exposer le port SSH
+EXPOSE 22
+EXPOSE 8123
+# Commande pour démarrer Home Assistant
+CMD service ssh start && python3 -m homeassistant --config /config
