--- a/Dockerfile/ldap_cli/Dockerfile
+++ b/Dockerfile/ldap_cli/Dockerfile
@@ -1,7 +1,14 @@
-FROM dnknth/ldap-ui
+# Utiliser l'image de base Ubuntu 20.04
+FROM ubuntu:20.04
 
-# Installer SSH
-RUN apt-get update && apt-get install -y openssh-server
+# Mettre à jour les paquets et installer SSH, OpenLDAP
+RUN apt-get update && apt-get install -y \
+    openssh-server \
+    slapd \
+    ldap-utils \
+    curl \
+    vim \
+    net-tools
 
 # Créer le répertoire pour SSH
 RUN mkdir /var/run/sshd
@@ -10,5 +17,12 @@ RUN mkdir /var/run/sshd
 RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
 RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
-# Démarrer SSH
-CMD ["/usr/sbin/sshd", "-D"]
+# Définir un mot de passe pour l'utilisateur root
+RUN echo 'root:password' | chpasswd
+
+# Exposer le port SSH
+EXPOSE 22
+EXPOSE 389
+
+# Commande pour démarrer OpenLDAP
+CMD service ssh start && service slapd start
