--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -1,10 +1,13 @@
 # Utiliser l'image de base Ubuntu
 FROM ubuntu:20.04
 
-# Mettre à jour les packages et installer Bind9 et OpenSSH
+# Configuration de la zone horaire pour éviter les invites interactives de tzdata
 RUN echo "tzdata tzdata/Areas select Europe" | debconf-set-selections \
-    && echo "tzdata tzdata/Zones/Europe select Paris" | debconf-set-selections \ 
-    apt-get update && apt-get install -y \
+    && echo "tzdata tzdata/Zones/Europe select Paris" | debconf-set-selections \
+    && dpkg-reconfigure -f noninteractive tzdata
+    
+# Mettre à jour les packages et installer Bind9 et OpenSSH
+RUN apt-get update && apt-get install -y \
     bind9 \
     bind9utils \
     openssh-server \
