--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -1,38 +1,31 @@
-# Utiliser l'image de base Ubuntu
+# Utilisation de l'image de base Ubuntu
 FROM ubuntu:20.04
 
-# Configuration de la zone horaire pour éviter les invites interactives de tzdata
-RUN echo "tzdata tzdata/Areas select Europe" | debconf-set-selections \
-    && echo "tzdata tzdata/Zones/Europe select Paris" | debconf-set-selections \
-    && dpkg-reconfigure -f noninteractive tzdata
-    
-# Mettre à jour les packages et installer Bind9 et OpenSSH
+# Définir les variables d'environnement pour éviter les invites interactives
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Installer les paquets de base nécessaires, y compris tzdata, avant toute configuration
+RUN apt-get update && apt-get install -y \
+    apt-utils \
+    curl \
+    vim \
+    net-tools \
+    iputils-ping \
+    lsb-release \
+    tzdata \
+    && apt-get clean
+
+# Installation des paquets nécessaires pour le serveur DNS
 RUN apt-get update && apt-get install -y \
     bind9 \
     bind9utils \
     openssh-server \
-    curl \
-    vim \
-    net-tools
+    && apt-get clean
 
-# Créer le répertoire pour SSH
-RUN mkdir /var/run/sshd
+# Configuration du service SSH pour permettre les connexions root et l'authentification par mot de passe
+RUN mkdir /var/run/sshd \
+    && echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
+    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
-# Configurer SSH pour permettre la connexion root et l'authentification par mot de passe
-RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
-RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
-
-# Définir un mot de passe pour l'utilisateur root (par exemple "password")
-RUN echo 'root:password' | chpasswd
-
-# Exposer les ports pour SSH (22) et Bind9 (53)
-EXPOSE 22
-EXPOSE 5553/udp
-EXPOSE 5443/tcp
-EXPOSE 10000/tcp  
-
-# Si tu as une interface d'administration Web
-
-# Lancer SSH et Bind9
-CMD service ssh start && named -f
-
+# Démarrer les services nécessaires (SSH, bind9, etc.)
+CMD service ssh start && service bind9 start && tail -f /dev/null
