--- a/Deploiement_de_machine/Dockerfile/opnsense/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/opnsense/Dockerfile
@@ -2,9 +2,9 @@
 FROM ubuntu:20.04
 
 # Configuration de la zone horaire pour éviter les invites interactives de tzdata
-RUN echo "tzdata tzdata/Areas select Europe" | debconf-set-selections \
-    && echo "tzdata tzdata/Zones/Europe select Paris" | debconf-set-selections \
-    && dpkg-reconfigure -f noninteractive tzdata
+#RUN echo "tzdata tzdata/Areas select Europe" | debconf-set-selections \
+ #   && echo "tzdata tzdata/Zones/Europe select Paris" | debconf-set-selections \
+  #  && dpkg-reconfigure -f noninteractive tzdata
     
 # Mettre à jour les paquets et installer SSH et Nginx pour simuler OPNsense
 RUN apt-get update && apt-get install -y \
