--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -9,8 +9,7 @@ RUN apt-get update && apt-get install -y \
 
 # Configurer SSH
 RUN mkdir /var/run/sshd && echo 'root:password' | chpasswd 
-RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN sed -i 's/#PasswordAuthentication yes/' /etc/ssh/sshd_config
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && sed -i 's/#PasswordAuthentication yes/' /etc/ssh/sshd_config
 
 # Configurer Bind9 (par défaut)
 RUN mkdir -p /etc/bind/zones
