--- a/Deploiement_de_machine/Dockerfile/samba/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/samba/Dockerfile
@@ -7,20 +7,12 @@ FROM ubuntu:20.04
   #  && dpkg-reconfigure -f noninteractive tzdata
     
 # Mettre à jour les paquets et installer SSH et Samba
-RUN apt-get update && apt-get install -y \
-    openssh-server \
-    samba \
-    curl \
-    vim \
-    net-tools \
-    iputils-ping
+RUN apt-get update && apt-get install -y openssh-server samba curl vim net-tools iputils-ping
 
-# Créer le répertoire pour SSH
-RUN mkdir /var/run/sshd
-
-# Activer la connexion root et l'authentification par mot de passe
-RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
-RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+# Configurer SSH
+RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
+RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
+    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
 # Définir un mot de passe pour l'utilisateur root
 RUN echo 'root:password' | chpasswd
