--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -5,9 +5,8 @@ FROM ubuntu:22.04
 RUN apt-get update && apt-get install -y bind9 bind9utils bind9-doc openssh-server && rm -rf /var/lib/apt/lists/*
 
 # Configurer SSH
-RUN mkdir /var/run/sshd && echo 'root:password' | chpasswd
-RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
-    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
+RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
 # Configurer Bind9 (par défaut)
 RUN mkdir -p /etc/bind/zones
@@ -16,5 +15,5 @@ RUN mkdir -p /etc/bind/zones
 EXPOSE 5443/udp 5553/tcp 22 10000
 
 # Démarrer Bind9 et SSH
-#CMD service ssh start && service bind9 start named -f
-CMD tail -f /dev/null
+CMD service ssh start && service bind9 start named -f
+#CMD tail -f /dev/null
