--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - ./smb:/etc/samba
     environment:
       - DEBIAN_FRONTEND=noninteractive
-    restart: always
+    restart: unless-stopped
 
   # Serveur LDAP
   ldap:
