--- a/Deploiement_de_machine/Dockerfile/samba/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/samba/Dockerfile
@@ -17,5 +17,5 @@ EXPOSE 22
 
 # Commande pour démarrer Samba
 #CMD service ssh start && service smbd start && tail -f /dev/null
-CMD service ssh start && tail -f /dev/null
+CMD service ssh start && tail -f /dev/null && service smbd start
 #CMD tail -f /dev/null
