--- a/Deploiement_de_machine/Dockerfile/samba/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/samba/Dockerfile
@@ -5,12 +5,12 @@ FROM ubuntu:20.04
 RUN apt-get update && apt-get install -y openssh-server samba curl vim net-tools iputils-ping
 
 # Configurer SSH
-#RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
-#RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
-#    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
+RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
+    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
 # Définir un mot de passe pour l'utilisateur root
-#RUN echo 'root:password' | chpasswd
+RUN echo 'root:password' | chpasswd
 
 # Exposer le port SSH
 EXPOSE 22
