--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -9,13 +9,13 @@ RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
 RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
     && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
-# Configurer Bind9 (par défaut)
+# Configurer Bind9
 RUN mkdir -p /etc/bind/zones
 
 # Exposer les ports pour Bind9 (DNS) et SSH
 EXPOSE 5443/udp 5553/tcp 22 10000
 
-# Démarrer Bind9 et SSH
-#CMD service ssh start && service bind9 start && tail -f /dev/null
 CMD service ssh start && tail -f /dev/null
-#CMD tail -f /dev/null
+
+# Commande pour démarrer Bind9
+CMD ["/usr/sbin/named", "-f", "-g"]
