--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -15,7 +15,4 @@ RUN mkdir -p /etc/bind/zones
 # Exposer les ports pour Bind9 (DNS) et SSH
 EXPOSE 5443/udp 5553/tcp 22 10000
 
-CMD service ssh start && tail -f /dev/null
-
-# Commande pour démarrer Bind9
-CMD ["/usr/sbin/named", "-f", "-g"]
+CMD service ssh start && tail -f /dev/null && ["/usr/sbin/named", "-f", "-g"]
