--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -14,11 +14,10 @@ services:
       - "1053:53/udp"
       - "1053:53/tcp"
       - "2222:22"
-      - "10000:10000/tcp" # Port d'administration
+      #- "10000:10000/tcp" # Port d'administration
     volumes:
       - ./bind:/etc/bind
       - ./keys:/etc/bind/keys
-      - ./bind/named.conf.local:/etc/bind/named.conf.local
     restart: unless-stopped
 
   # Active Directory (Samba)
