--- a/Deploiement_de_machine/Dockerfile/dns/Dockerfile
+++ b/Deploiement_de_machine/Dockerfile/dns/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y bind9 bind9utils bind9-doc openssh-serv
 # Configurer SSH
 RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
 RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
-    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+   && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
 # Configurer Bind9
 RUN mkdir -p /etc/bind/zones
@@ -16,4 +16,4 @@ RUN mkdir -p /etc/bind/zones
 EXPOSE 53/udp 53/tcp 22 
 # 10000
 
-CMD service ssh start && /usr/sbin/named -f -g 
+CMD service ssh start && /usr/sbin/named -f -g && tail -f /dev/null
