--- a/test_machine/DNS/Dockerfile
+++ b/test_machine/DNS/Dockerfile
@@ -1,18 +1,23 @@
-# Utiliser l'image de base Ubuntu
-FROM ubuntu:22.04
 
-# Mettre à jour le système et installer les paquets nécessaires
-RUN apt-get update && apt-get -y install bind9 bind9utils bind9-doc openssh-server apt-utils && rm -rf /var/lib/apt/lists/*
+
+FROM debian:latest
+
+RUN apt update
+RUN apt install bind9 openssh-server apt-utils -y
 
 # Configurer SSH
 RUN mkdir /var/run/sshd && echo 'root:root' | chpasswd
 RUN echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config \
    && echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
 
-# Configurer Bind9
+
 RUN mkdir -p /etc/bind/zones
 
-# Exposer les ports pour Bind9 (DNS) et SSH
-EXPOSE 53/udp 53/tcp 22 10000
+EXPOSE 53/tcp
+EXPOSE 53/udp
+EXPOSE 22
+EXPOSE 10000
 
-CMD service ssh start && tail -f /dev/null && /usr/sbin/named -f -g
+USER bind:bind
+
+CMD ["/usr/sbin/named", "-f", "-g"]
