--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -17,6 +17,23 @@
     dest: /etc/bind/db.example.com
 
 - name: Redémarrer Bind9
-  command: ["/usr/sbin/named", "-f"]
-  async: 1
-  poll: 0
+  service:
+    name: bind9
+    state: restarted
+
+- name: Installer SSH et Bind9
+  apt:
+    name:
+      - bind9
+      - openssh-server
+    state: present
+    update_cache: yes
+
+- name: Configurer SSH pour root
+  lineinfile:
+    path: /etc/ssh/sshd_config
+    regexp: '^PermitRootLogin'
+    line: 'PermitRootLogin yes'
+
+- name: Démarrer le serveur SSH
+  command: service ssh start
