--- a/test_ansible/docker-compose.yml
+++ b/test_ansible/docker-compose.yml
@@ -13,7 +13,6 @@ services:
       - "53:53/udp"
       - "2222:22"  # SSH exposé
     command: ["tail", "-f", "/dev/null"]  # Garder le conteneur actif sans exiger sshd
+    networks:
+      - internal_net
 
-volumes:
-  bind-config:
-  bind-cache:
