--- a/test_ansible/inventory.yml
+++ b/test_ansible/inventory.yml
@@ -4,6 +4,7 @@ all:
       hosts:
         localhost:
           ansible_connection: local
+          ansible_user: toine-fa
     bind9_container:
       hosts:
         bind9:
